--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<html>
+  
+<head>
+   <meta name = "viewport" content = "initial-scale=1.0, width=device-width">
+   <meta name = "description" content = "Welcome to BoomChat">
+   <script src="js/index.js" type="text/javascript"></script>
+   <script src="js/index.js" type="text/javascript"></script>
+   <title></title>
+</head>
+  
+<body>
+  
+</body>
+  
+</html>
 
