--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
    <meta name = "viewport" content = "initial-scale=1.0, width=device-width">
    <meta name = "description" content = "Welcome to BoomChat">
-   <script src="js/index.js" type="text/javascript"></script>
-   <script src="js/index.js" type="text/javascript"></script>
+   <meta name = "keywords" content = "boom, chat, social, network">
+   <link rel = "shortcut icon" href = "icon.png">
+   <script src = "js/index.js" type = "text/javascript"></script>
+   <link rel = "stylesheet" href = "index.css">
    <title></title>
 </head>
   
