--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name = "keywords" content = "boom, chat, social, network">
    <link rel = "shortcut icon" href = "icon.png">
    <script src = "js/index.js" type = "text/javascript"></script>
-   <link rel = "stylesheet" href = "index.css">
+   <link rel = "stylesheet" href = "css/index.css">
    <title></title>
 </head>
   
