--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
    <title></title>
 </head>
   
-<body>
-  
-</body>
-  
-</html>
-
+<body class="body" id="body">//*this is for the page body*//
+	<div class="menu" id="menu">
+		<table class="menucontent">
+			<tr>
+				<td></td>
+				<td></td>
+				<td></td>
+      </tr>
+    </table>
