--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
    <title></title>
 </head>
   
-<body class="body" id="body">//*this is for the page body*//
-	<div class="menu" id="menu">
+<body class="body" id="body"><---!this is for the page body--->
+	<div class="menu" id="menu"><---!this is for the menu bar--->
 		<table class="menucontent">
 			<tr>
 				<td></td>
