--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
    <link rel = "stylesheet" href = "css/index.css">
    <title></title>
 </head>
-  
-<body class="body" id="body"><---!this is for the page body--->
-	<div class="menu" id="menu"><---!this is for the menu bar--->
-		<table class="menucontent">
-			<tr>
-				<td></td>
-				<td></td>
-				<td></td>
+
+<body class="body" id="body"><---!this is for the page body---></body>
+<div class="menu" id="menu"><---!this is for the menu bar--->
+   <table class="menucontent">
+      <tr>
+	 <td></td>
+	 <td></td>
+	 <td></td>
       </tr>
-    </table>
+   </table>
+</div>
