--- a/index.html
+++ b/index.html
@@ -6,17 +6,23 @@
    <meta name = "keywords" content = "boom, chat, social, network">
    <link rel = "shortcut icon" href = "images/icon.png">
    <script src = "js/index.js" type = "text/javascript"></script>
-   <link rel = "stylesheet" href = "css/index.css">
+   <link rel = "stylesheet" href = "index.css">
    <title></title>
 </head>
-
-<body class="body" id="body"><---!this is for the page body---></body>
-<div class="menu" id="menu"><---!this is for the menu bar--->
-   <table class="menucontent">
-      <tr>
-	 <td></td>
-	 <td></td>
-	 <td></td>
-      </tr>
-   </table>
-</div>
+<body>
+   <div class="menubar">
+       <table class="menucontents" cellpadding="0" cellspacing="0">
+         <tr>
+            <td class="logoholder"><img src="chat.png" class="logo"></td>
+            <td style="width:100px"><input type="text" class="search" placeholder="Search for people, posts or events"></td>
+            <td style="width:100px"><label class="options">Home</label></td>
+            <td style="width:100px"><label class="options">Messages</label></td>
+            <td style="width:100px"><label class="options">News Feed</label></td>
+            <td style="width:50px;text-align:center"><img src="cover.jpg" class="cover"></td>
+         </tr>
+       </table>
+   </div>
+   <div class="body">
+      
+   </div>
+</body>
