--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
    <meta name = "keywords" content = "boom, chat, social, network">
    <link rel = "shortcut icon" href = "images/icon.png">
    <script src = "js/index.js" type = "text/javascript"></script>
-   <link rel = "stylesheet" href = "index.css">
+   <link rel = "stylesheet" href = "css/index.css">
    <title></title>
 </head>
 <body>
    <div class="menubar">
        <table class="menucontents" cellpadding="0" cellspacing="0">
          <tr>
-            <td class="logoholder"><img src="chat.png" class="logo"></td>
+            <td class="logoholder"><img src="images/chat.png" class="logo"></td>
             <td style="width:100px"><input type="text" class="search" placeholder="Search for people, posts or events"></td>
             <td style="width:100px"><label class="options">Home</label></td>
             <td style="width:100px"><label class="options">Messages</label></td>
