--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
          <hr>
          <table class="perc">
          	<tr>
-              <td class="txt"><center><img src="love.png" class="interact"> 5</center></td>
-              <td class="txt"><center><img src="comment.png" class="interact"> 10</center></td>
+              <td class="txt"><center><img src="images/love.png" class="interact"> 5</center></td>
+              <td class="txt"><center><img src="images/comment.png" class="interact"> 10</center></td>
          	<td>
          </table>
       </div></center>
@@ -35,8 +35,8 @@
          <hr>
          <table class="perc">
          	<tr>
-              <td class="txt"><center><img src="love1.png" class="interact"> 5</center></td>
-              <td class="txt"><center><img src="comment.png" class="interact"> 10</center></td>
+              <td class="txt"><center><img src="images/love1.png" class="interact"> 5</center></td>
+              <td class="txt"><center><img src="images/comment.png" class="interact"> 10</center></td>
          	</tr>
          </table>
       </div></center>
@@ -45,7 +45,7 @@
       	<div class="posttop">
       	<table style="width:100%;height:100%">
       		<tr>
-      		 <td style="width:40px"><img src="cover.jpg" class="pict"></td>
+      		 <td style="width:40px"><img src="images/cover.jpg" class="pict"></td>
       		 <td><center><textarea class="postbox" placeholder="Share ideas, events, photos..." ondragover="dov()" ondragleave="dlv()"></textarea></center></td>
       		</tr>
       	</table>
