--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <title></title>
 </head>
 <center>
-  	<table class="menu"><tr><td><center><div class="images4"></div></center></td><td><center><div class="images1"></div></center></td><td><center><div class="images2"></div></center></td> <td><center><div class="images3"></div></center></td></tr></table>
+  	<table class="menu"><tr><td><center><div class="images/images4"></div></center></td><td><center><div class="images/images1"></div></center></td><td><center><div class="images/images2"></div></center></td> <td><center><div class="images/images3"></div></center></td></tr></table>
   </center>
   <div class="body">
       <center>
