--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       	 <label><p align="left" class="ov"><img class="image">  <label class="overall">Emmanuel Haankwenda Shared a post</label></p></label>
          <hr>
          <div class="content">The students in Africa are so intelligent</div>
-         <center><div class="pic"></div></center>
+         <center><img class="pic"></center>
          <hr>
          <table class="perc">
          	<tr>
-              <td class="txt"><center><img src="images/love.png" class="interact"> 5</center></td>
+              <td class="txt"><center><img src="images/love.png" id="love" class="interact"> 5</center></td>
               <td class="txt"><center><img src="images/comment.png" class="interact"> 10</center></td>
          	<td>
          </table>
@@ -31,11 +31,11 @@
       	 <label><p align="left" class="ov"><img class="image2">  <label class="overall">Edinyanga Ottoho Shared a post</label></p></label>
          <hr>
          <div class="content">At the rate in which the world is moving, AI will surpass human intelligence </div>
-         <center><div class="pic2"></div></center>
+         <center><img class="pic2"></center>
          <hr>
          <table class="perc">
          	<tr>
-              <td class="txt"><center><img src="images/love1.png" class="interact"> 5</center></td>
+              <td class="txt"><center><img src="images/love.png" id="love" class="interact"> 5</center></td>
               <td class="txt"><center><img src="images/comment.png" class="interact"> 10</center></td>
          	</tr>
          </table>
