--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
          <hr>
          <table class="perc">
          	<tr>
-              <td class="txt"><center><img src="images/love.png" id="love" class="interact"> 5</center></td>
-              <td class="txt"><center><img src="images/comment.png" class="interact"> 10</center></td>
+              <td class="txt"><center><img src="images/love.png" id="love" class="interact"> 2</center></td>
+              <td class="txt"><center><img src="images/comment.png" class="interact" id="comment"> 6</center></td>
          	<td>
          </table>
       </div></center>
@@ -36,7 +36,7 @@
          <table class="perc">
          	<tr>
               <td class="txt"><center><img src="images/love.png" id="love" class="interact"> 5</center></td>
-              <td class="txt"><center><img src="images/comment.png" class="interact"> 10</center></td>
+              <td class="txt"><center><img src="images/comment.png" class="interact" id="comment"> 10</center></td>
          	</tr>
          </table>
       </div></center>
