--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <center>
   	<table class="menu"><tr><td><center><div class="images/images4"></div></center></td><td><center><div class="images/images1"></div></center></td><td><center><div class="images/images2"></div></center></td> <td><center><div class="images/images3"></div></center></td></tr></table>
   </center>
-  <div class="body">
+   <div class="body">
       <center>
       <center><div class="posts">
       	 <label><p align="left" class="ov"><img class="image">  <label class="overall">Emmanuel Haankwenda Shared a post</label></p></label>
@@ -22,8 +22,8 @@
          <hr>
          <table class="perc">
          	<tr>
-              <td class="txt"><center><img src="images/love.png" id="love" class="interact"> 2</center></td>
-              <td class="txt"><center><img src="images/comment.png" class="interact" id="comment"> 6</center></td>
+              <td class="txt"><center><img class="interact1"> 5</center></td>
+              <td class="txt"><center><img class="interact2"> 10</center></td>
          	<td>
          </table>
       </div></center>
@@ -35,8 +35,8 @@
          <hr>
          <table class="perc">
          	<tr>
-              <td class="txt"><center><img src="images/love.png" id="love" class="interact"> 5</center></td>
-              <td class="txt"><center><img src="images/comment.png" class="interact" id="comment"> 10</center></td>
+              <td class="txt"><center><img class="interact1"> 5</center></td>
+              <td class="txt"><center><img class="interact2"> 10</center></td>
          	</tr>
          </table>
       </div></center>
