--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       	<div class="posttop">
       	<table style="width:100%;height:100%">
       		<tr>
-      		 <td style="width:40px"><img src="cover.jpg" class="pict"></td>
+      		 <td style="width:40px"><img src="images/cover.jpg" class="pict"></td>
       		 <td><center><textarea class="postbox" placeholder="Share ideas, events, photos..." ondragover="dov()" ondragleave="dlv()"></textarea></center></td>
       		</tr>
       	</table>
