--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta name = "viewport" content = "initial-scale=1.0, width=device-width">
    <meta name = "description" content = "Welcome to BoomChat">
    <meta name = "keywords" content = "boom, chat, social, network">
-   <link rel = "shortcut icon" href = "images/icon.png">
+   <link rel = "shortcut icon" href = "images/chat.png">
    <script src = "js/index.js" type = "text/javascript"></script>
    <link rel = "stylesheet" href = "css/index.css">
    <title></title>
